// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsList should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          My Apps
        </h1>
      </div>
      <div
        class="ec47sgk-el-mb11 e20pb60-el-grid"
      >
        <div
          class="e14pp0yd-el-col"
        >
          <div
            class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
          >
            <div
              class="ec7f1kt-el-card-context-menu-wrapper"
            >
              <div
                class="ewpy0cr-el-card-context-menu-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="eh85zp4-el-card-context-menu-items"
              >
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="e1sw79q5-el-card-main-wrap"
            >
              <div
                class="e1rjwng7-el-card-heading-wrap"
              >
                <h5
                  class="e1n8fwu7-el-card-heading"
                >
                  MOCK_APP_NAME
                </h5>
                <h6
                  class="e160zim8-el-card-sub-heading"
                />
                <h6
                  class="e1nfyxby-el-card-sub-heading-additional"
                />
              </div>
              <button
                class="e17hzamr-el-mobile-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                >
                  <svg />
                </span>
              </button>
            </div>
            <div
              class="em92f2t-el-card-body-wrap"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </div>
          </div>
        </div>
        <div
          class="e14pp0yd-el-col"
        >
          <div
            class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
          >
            <div
              class="ec7f1kt-el-card-context-menu-wrapper"
            >
              <div
                class="ewpy0cr-el-card-context-menu-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="eh85zp4-el-card-context-menu-items"
              >
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="e1sw79q5-el-card-main-wrap"
            >
              <div
                class="e1rjwng7-el-card-heading-wrap"
              >
                <h5
                  class="e1n8fwu7-el-card-heading"
                >
                  MOCK_APP_NAME_ANOTHER
                </h5>
                <h6
                  class="e160zim8-el-card-sub-heading"
                />
                <h6
                  class="e1nfyxby-el-card-sub-heading-additional"
                />
              </div>
              <button
                class="e17hzamr-el-mobile-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                >
                  <svg />
                </span>
              </button>
            </div>
            <div
              class="em92f2t-el-card-body-wrap"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        My Apps
      </h1>
    </div>
    <div
      class="ec47sgk-el-mb11 e20pb60-el-grid"
    >
      <div
        class="e14pp0yd-el-col"
      >
        <div
          class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
        >
          <div
            class="ec7f1kt-el-card-context-menu-wrapper"
          >
            <div
              class="ewpy0cr-el-card-context-menu-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="eh85zp4-el-card-context-menu-items"
            >
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
          <div
            class="e1sw79q5-el-card-main-wrap"
          >
            <div
              class="e1rjwng7-el-card-heading-wrap"
            >
              <h5
                class="e1n8fwu7-el-card-heading"
              >
                MOCK_APP_NAME
              </h5>
              <h6
                class="e160zim8-el-card-sub-heading"
              />
              <h6
                class="e1nfyxby-el-card-sub-heading-additional"
              />
            </div>
            <button
              class="e17hzamr-el-mobile-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="em92f2t-el-card-body-wrap"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </div>
        </div>
      </div>
      <div
        class="e14pp0yd-el-col"
      >
        <div
          class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
        >
          <div
            class="ec7f1kt-el-card-context-menu-wrapper"
          >
            <div
              class="ewpy0cr-el-card-context-menu-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="eh85zp4-el-card-context-menu-items"
            >
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
          <div
            class="e1sw79q5-el-card-main-wrap"
          >
            <div
              class="e1rjwng7-el-card-heading-wrap"
            >
              <h5
                class="e1n8fwu7-el-card-heading"
              >
                MOCK_APP_NAME_ANOTHER
              </h5>
              <h6
                class="e160zim8-el-card-sub-heading"
              />
              <h6
                class="e1nfyxby-el-card-sub-heading-additional"
              />
            </div>
            <button
              class="e17hzamr-el-mobile-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="em92f2t-el-card-body-wrap"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsList should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          My Apps
        </h1>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
            >
              Controls
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 e20pb60-el-grid"
      >
        <div
          class="e14pp0yd-el-col"
        >
          <div
            class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
          >
            <div
              class="ec7f1kt-el-card-context-menu-wrapper"
            >
              <div
                class="ewpy0cr-el-card-context-menu-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="eh85zp4-el-card-context-menu-items"
              >
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="e1sw79q5-el-card-main-wrap"
            >
              <div
                class="e1rjwng7-el-card-heading-wrap"
              >
                <h5
                  class="e1n8fwu7-el-card-heading"
                >
                  MOCK_APP_NAME
                </h5>
                <h6
                  class="e160zim8-el-card-sub-heading"
                />
                <h6
                  class="e1nfyxby-el-card-sub-heading-additional"
                />
              </div>
              <button
                class="e17hzamr-el-mobile-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                >
                  <svg />
                </span>
              </button>
            </div>
            <div
              class="em92f2t-el-card-body-wrap"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </div>
          </div>
        </div>
        <div
          class="e14pp0yd-el-col"
        >
          <div
            class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
          >
            <div
              class="ec7f1kt-el-card-context-menu-wrapper"
            >
              <div
                class="ewpy0cr-el-card-context-menu-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="eh85zp4-el-card-context-menu-items"
              >
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
                <div
                  class="euknxbk-el-card-context-menu-item"
                >
                  <span
                    class="ej9yrfo-el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="e1sw79q5-el-card-main-wrap"
            >
              <div
                class="e1rjwng7-el-card-heading-wrap"
              >
                <h5
                  class="e1n8fwu7-el-card-heading"
                >
                  MOCK_APP_NAME_ANOTHER
                </h5>
                <h6
                  class="e160zim8-el-card-sub-heading"
                />
                <h6
                  class="e1nfyxby-el-card-sub-heading-additional"
                />
              </div>
              <button
                class="e17hzamr-el-mobile-toggle"
              >
                <span
                  class="ej9yrfo-el-icon"
                >
                  <svg />
                </span>
              </button>
            </div>
            <div
              class="em92f2t-el-card-body-wrap"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        My Apps
      </h1>
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
          >
            Controls
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="ec47sgk-el-mb11 e20pb60-el-grid"
    >
      <div
        class="e14pp0yd-el-col"
      >
        <div
          class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
        >
          <div
            class="ec7f1kt-el-card-context-menu-wrapper"
          >
            <div
              class="ewpy0cr-el-card-context-menu-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="eh85zp4-el-card-context-menu-items"
            >
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
          <div
            class="e1sw79q5-el-card-main-wrap"
          >
            <div
              class="e1rjwng7-el-card-heading-wrap"
            >
              <h5
                class="e1n8fwu7-el-card-heading"
              >
                MOCK_APP_NAME
              </h5>
              <h6
                class="e160zim8-el-card-sub-heading"
              />
              <h6
                class="e1nfyxby-el-card-sub-heading-additional"
              />
            </div>
            <button
              class="e17hzamr-el-mobile-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="em92f2t-el-card-body-wrap"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </div>
        </div>
      </div>
      <div
        class="e14pp0yd-el-col"
      >
        <div
          class="e6p05ya-el-fade-in cbaewf6-card-cursor ertn4py-el-card-wrap"
        >
          <div
            class="ec7f1kt-el-card-context-menu-wrapper"
          >
            <div
              class="ewpy0cr-el-card-context-menu-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="eh85zp4-el-card-context-menu-items"
            >
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="euknxbk-el-card-context-menu-item"
              >
                <span
                  class="ej9yrfo-el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
          <div
            class="e1sw79q5-el-card-main-wrap"
          >
            <div
              class="e1rjwng7-el-card-heading-wrap"
            >
              <h5
                class="e1n8fwu7-el-card-heading"
              >
                MOCK_APP_NAME_ANOTHER
              </h5>
              <h6
                class="e160zim8-el-card-sub-heading"
              />
              <h6
                class="e1nfyxby-el-card-sub-heading-additional"
              />
            </div>
            <button
              class="e17hzamr-el-mobile-toggle"
            >
              <span
                class="ej9yrfo-el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="em92f2t-el-card-body-wrap"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
